// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter Component Filter renders advanced filter and handles changes 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        class="bar"
      >
        <div
          class="fields"
        >
          <div>
            Mocked FilterItem props: 
            {"inputValues":{"number":1},"item":{"dataIndex":"number","filterType":"number","label":"Number","placeholder":"Search number"},"inline":true}
          </div>
        </div>
        <div
          class="actions"
        >
          <button
            class="button"
            color="reversed"
            data-testid="DATA-TEST-ID-reset"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              reset
            </div>
          </button>
          <button
            class="button"
            color="reversed"
            data-testid="DATA-TEST-ID-open-advanced"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              advancedSearch
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Filter Component Filter renders advanced filter and handles changes 2`] = `
<body
  style="overflow-y: hidden; overflow-x: hidden;"
>
  <div>
    <div
      class="container"
    >
      <div
        class="bar"
      >
        <div
          class="fields"
        >
          <div>
            Mocked FilterItem props: 
            {"inputValues":{"number":1},"item":{"dataIndex":"number","filterType":"number","label":"Number","placeholder":"Search number"},"inline":true}
          </div>
        </div>
        <div
          class="actions"
        >
          <button
            class="button"
            color="reversed"
            data-testid="DATA-TEST-ID-reset"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              reset
            </div>
          </button>
          <button
            class="button"
            color="reversed"
            data-testid="DATA-TEST-ID-open-advanced"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              advancedSearch
            </div>
          </button>
        </div>
      </div>
      <div>
        <div
          class="overlay"
        >
          <div
            class="container large"
          >
            <div
              class="header"
            >
              <div
                class="title"
              >
                advancedSearchTitle
              </div>
              <div
                class="closeIcon"
              >
                <i
                  class="icon"
                  icon="fal,times"
                />
              </div>
            </div>
            <div
              class="container"
            >
              <div
                class="row"
              >
                <div>
                  Mocked FilterItem props: 
                  {"inputValues":{"number":1},"item":{"dataIndex":"number","filterType":"number","label":"Number","placeholder":"Search number","dataTestId":"NUMBER-ADVANCED-SEARCH"}}
                </div>
              </div>
            </div>
            <div
              class="container"
            >
              <button
                class="button"
                color="secondary"
                data-testid="DATA-TEST-ID-advanced-reset"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  reset
                </div>
              </button>
              <button
                class="button"
                color="primary"
                data-testid="DATA-TEST-ID-advanced-submit"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  search
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    id="root-portal-id"
  >
    <div />
  </div>
</body>
`;

exports[`Filter Component Filter renders advanced filter and handles changes 3`] = `
<body
  style="overflow-y: hidden; overflow-x: hidden;"
>
  <div>
    <div
      class="container"
    >
      <div
        class="bar"
      >
        <div
          class="fields"
        >
          <div>
            Mocked FilterItem props: 
            {"inputValues":{"number":1},"item":{"dataIndex":"number","filterType":"number","label":"Number","placeholder":"Search number"},"inline":true}
          </div>
        </div>
        <div
          class="actions"
        >
          <button
            class="button"
            color="reversed"
            data-testid="DATA-TEST-ID-reset"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              reset
            </div>
          </button>
          <button
            class="button"
            color="reversed"
            data-testid="DATA-TEST-ID-open-advanced"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              advancedSearch
            </div>
          </button>
        </div>
      </div>
      <div>
        <div
          class="overlay"
        >
          <div
            class="container large"
          >
            <div
              class="header"
            >
              <div
                class="title"
              >
                advancedSearchTitle
              </div>
              <div
                class="closeIcon"
              >
                <i
                  class="icon"
                  icon="fal,times"
                />
              </div>
            </div>
            <div
              class="container"
            >
              <div
                class="row"
              >
                <div>
                  Mocked FilterItem props: 
                  {"inputValues":{"number":10},"item":{"dataIndex":"number","filterType":"number","label":"Number","placeholder":"Search number","dataTestId":"NUMBER-ADVANCED-SEARCH"}}
                </div>
              </div>
            </div>
            <div
              class="container"
            >
              <button
                class="button"
                color="secondary"
                data-testid="DATA-TEST-ID-advanced-reset"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  reset
                </div>
              </button>
              <button
                class="button"
                color="primary"
                data-testid="DATA-TEST-ID-advanced-submit"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  search
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    id="root-portal-id"
  >
    <div />
  </div>
</body>
`;

exports[`Filter Component Filter renders advanced filter and handles changes 4`] = `
<body
  style="overflow-y: hidden; overflow-x: hidden;"
>
  <div>
    <div
      class="container"
    >
      <div
        class="bar"
      >
        <div
          class="fields"
        >
          <div>
            Mocked FilterItem props: 
            {"inputValues":{"number":1},"item":{"dataIndex":"number","filterType":"number","label":"Number","placeholder":"Search number"},"inline":true}
          </div>
        </div>
        <div
          class="actions"
        >
          <button
            class="button"
            color="reversed"
            data-testid="DATA-TEST-ID-reset"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              reset
            </div>
          </button>
          <button
            class="button"
            color="reversed"
            data-testid="DATA-TEST-ID-open-advanced"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              advancedSearch
            </div>
          </button>
        </div>
      </div>
      <div>
        <div
          class="overlay"
        >
          <div
            class="container large"
          >
            <div
              class="header"
            >
              <div
                class="title"
              >
                advancedSearchTitle
              </div>
              <div
                class="closeIcon"
              >
                <i
                  class="icon"
                  icon="fal,times"
                />
              </div>
            </div>
            <div
              class="container"
            >
              <div
                class="row"
              >
                <div>
                  Mocked FilterItem props: 
                  {"inputValues":{"number":1},"item":{"dataIndex":"number","filterType":"number","label":"Number","placeholder":"Search number","dataTestId":"NUMBER-ADVANCED-SEARCH"}}
                </div>
              </div>
            </div>
            <div
              class="container"
            >
              <button
                class="button"
                color="secondary"
                data-testid="DATA-TEST-ID-advanced-reset"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  reset
                </div>
              </button>
              <button
                class="button"
                color="primary"
                data-testid="DATA-TEST-ID-advanced-submit"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  search
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    id="root-portal-id"
  >
    <div />
  </div>
</body>
`;

exports[`Filter Component Filter renders advanced filter and handles changes 5`] = `
<body
  style="overflow-y: hidden; overflow-x: hidden;"
>
  <div>
    <div
      class="container"
    >
      <div
        class="bar"
      >
        <div
          class="fields"
        >
          <div>
            Mocked FilterItem props: 
            {"inputValues":{"number":1},"item":{"dataIndex":"number","filterType":"number","label":"Number","placeholder":"Search number"},"inline":true}
          </div>
        </div>
        <div
          class="actions"
        >
          <button
            class="button"
            color="reversed"
            data-testid="DATA-TEST-ID-reset"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              reset
            </div>
          </button>
          <button
            class="button"
            color="reversed"
            data-testid="DATA-TEST-ID-open-advanced"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              advancedSearch
            </div>
          </button>
        </div>
      </div>
      <div>
        <div
          class="overlay"
        >
          <div
            class="container large"
          >
            <div
              class="header"
            >
              <div
                class="title"
              >
                advancedSearchTitle
              </div>
              <div
                class="closeIcon"
              >
                <i
                  class="icon"
                  icon="fal,times"
                />
              </div>
            </div>
            <div
              class="container"
            >
              <div
                class="row"
              >
                <div>
                  Mocked FilterItem props: 
                  {"inputValues":{"number":100},"item":{"dataIndex":"number","filterType":"number","label":"Number","placeholder":"Search number","dataTestId":"NUMBER-ADVANCED-SEARCH"}}
                </div>
              </div>
            </div>
            <div
              class="container"
            >
              <button
                class="button"
                color="secondary"
                data-testid="DATA-TEST-ID-advanced-reset"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  reset
                </div>
              </button>
              <button
                class="button"
                color="primary"
                data-testid="DATA-TEST-ID-advanced-submit"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  search
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    id="root-portal-id"
  >
    <div />
  </div>
</body>
`;

exports[`Filter Component Filter renders advanced filter and handles changes 6`] = `
<body
  style=""
>
  <div>
    <div
      class="container"
    >
      <div
        class="bar"
      >
        <div
          class="fields"
        >
          <div>
            Mocked FilterItem props: 
            {"inputValues":{"number":100},"item":{"dataIndex":"number","filterType":"number","label":"Number","placeholder":"Search number"},"inline":true}
          </div>
        </div>
        <div
          class="actions"
        >
          <button
            class="button"
            color="reversed"
            data-testid="DATA-TEST-ID-reset"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              reset
            </div>
          </button>
          <button
            class="button"
            color="reversed"
            data-testid="DATA-TEST-ID-open-advanced"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              advancedSearch
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Filter Component Filter renders filterbar and handles changes 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="bar"
    >
      <div
        class="fields"
      >
        <div>
          Mocked FilterItem props: 
          {"item":{"dataIndex":"number","dataTestId":"NUMBER-FILTER-BAR","filterType":"number","label":"Number","placeholder":"Search number"},"inline":true}
        </div>
      </div>
      <div
        class="actions"
      >
        <button
          class="button"
          color="reversed"
          data-testid="DATA-TEST-ID-reset"
          tabindex="0"
          type="button"
        >
          <div
            class="label"
          >
            reset
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Filter Component Filter renders with no item in the filter bar 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="bar"
    >
      <div
        class="fields"
      />
      <div
        class="actions"
      >
        <button
          class="button"
          color="reversed"
          tabindex="0"
          type="button"
        >
          <div
            class="label"
          >
            reset
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Filter Component Filter renders without data-testid 1`] = `
<body
  style=""
>
  <div>
    <div
      class="container"
    >
      <div
        class="bar"
      >
        <div
          class="fields"
        >
          <div>
            Mocked FilterItem props: 
            {"inputValues":{"number":1},"item":{"dataIndex":"number","filterType":"number","label":"Number","placeholder":"Search number"},"inline":true}
          </div>
        </div>
        <div
          class="actions"
        >
          <button
            class="button"
            color="reversed"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              reset
            </div>
          </button>
          <button
            class="button"
            color="reversed"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              advancedSearch
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
